# MEMFlow

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/: CONTRIBUTING.md
apptainer/: mem_image.def
docs/: conf.py
jobs/: condor_huber_mmd.sub  path_config.yaml  pretraining_mmd_huber.sh  sbatch_flow_distributed_labframe.sh  sbatch_pretraining_distributed_labframe.sh  sbatch_pretraining_huber_mmd.sh  sbatch_pretraining_huber_mmd_labframe.sh  sbatch_pretraining_huber_mmd_labframe_gluon.py  sbatch_pretraining_huber_mmd_labframe_gluon.sh  sbatch_pretraining_mmd_huber.sh  sbatch_unscale_pretraining.sh  script_condor_classifier_exist.sh  script_condor_classifier_exist_matched.sh  script_condor_flow_evaluation_labframe.sh  script_condor_flow_labframe.sh  script_condor_flow_labframe_psloss.sh  script_condor_flow_labframe_sampling.sh  script_condor_flow_nopretrain.sh  script_condor_flow_tag.sh  script_condor_pretrain_transferFlow_exist.sh  script_condor_pretraining_distributed_labframe_gluon.sh  script_condor_pretraining_huber_mmd.sh  script_condor_pretraining_huber_mmd_labframe.sh  script_condor_pretraining_huber_mmd_labframe_gluon.sh  script_condor_pretraining_mmd_huber.sh  script_condor_transferFlow_AllPartons_btag.sh  script_condor_transferFlow_AllPartons_btag_4D.sh  script_condor_transferFlow_OnlyPartons_btag_boxcox.sh  script_condor_transferFlow_paperVersion-pretrained.sh  script_condor_transferFlow_paperVersion-pretrained_v3_onlyExist-leptonMET.sh  script_condor_transferFlow_paperVersion-pretrained_v3_onlyExist-leptonMET_OnlyPartons.sh  script_condor_transferFlow_paperVersion-pretrained_v3_onlyExist-leptonMET_OnlyPartons_btag.sh  script_condor_transferFlow_paperVersion-pretrained_v3_onlyExist-leptonMET_bPartons.sh  script_condor_transferFlow_paper_lepMET_onlyPartons_sampling.sh  script_condor_transferFlow_paper_lepMET_sampling.sh  script_condor_transfer_flow.sh  script_condor_transfer_flow_idea3.sh  script_condor_transfer_flow_idea3_conditioned.sh  script_condor_transfer_flow_paper.sh  script_condor_transfer_flow_paper_MDMM_MMD_Nofakepartons_nobtag.sh  (+19 more)
memflow/: __init__.py  _version.py
notebooks/: ClassifierCalibration.ipynb  DemoNeuralSampling.ipynb  JetPartonFlow.ipynb  RamboPartonConversion.ipynb  RamboTest.ipynb  RamboTest_v1.ipynb  TestFlows.ipynb  TestFlows_ImportanceSampling.ipynb  TestMadgraphChain.ipynb  UniformPDFsampling.ipynb  plot_loss.py
scripts/: CheckPSRegressed.ipynb  LearningRateScheduler.ipynb  LookAtDataset.ipynb  PhasespaceRamboRescaling.ipynb  Plots_Classifier_exist.ipynb  Plots_Flow_samples_quality.ipynb  Plots_Flow_samples_quality_noregression.ipynb  Plots_For_Clamp.ipynb  Plots_Performance_TransferFlow-Idea3-Conditioned.ipynb  Plots_Performance_TransferFlow-Idea3.ipynb  Plots_Performance_TransferFlow.ipynb  Plots_Performance_TransferFlow_paper.ipynb  Plots_Spanet_Analysis.ipynb  Plots_Study_weightsForEvents.ipynb  README.md  SamplingTrainingTest.ipynb  StudyBoost.ipynb  StudyBoost_and_Spanet.ipynb  (+95 more)
(+431 files in other folders)
