[metadata]
name = memflow
description = "A package for Matrix Element integration with Normalizing flows"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/valsdav/MEMFlow
author = Davide Valsecchi
author_email = davide.valsecchi@cern.ch
license = BSD-3-Clause
license_file = LICENSE
platforms =
    Any
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Typing :: Typed
project_urls =

[options]
packages = find:
install_requires =
    typing-extensions>=3.7;python_version<'3.8'
    vector
    hist
    pyaml
    pandas
    requests
    matplotlib
    numpy
    mplhep
    tqdm
    rich
    torch==2.1.0
    # tensorflow >= 2.8
    # pdfflow
    numba
    particle
    awkward
    omegaconf
    tensorboardX
    pyarrow
    fsspec
    pynvml
    comet_ml 
    
python_requires = >=3.7
include_package_data = True
scripts =    


[options.extras_require]
dev =
    snakeviz
    memray
    flake8
    black
    pytest>=6
    pytest-cov>=3
    pre-commit
    jupyterlab
    nox
docs =
    Sphinx>=4.0
    myst-parser>=0.13
    sphinx-book-theme>=0.1.0
    sphinx-copybutton
    sphinx-apidoc
    nox
test =
    pytest>=6
    pytest-cov>=3

[flake8]
extend-ignore = E203, E501, E722, B950
extend-select = B9
per-file-ignores =
    tests/*: T
    noxfile.py: T
